添加重载指令